<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                app:srcCompat="@drawable/ic_launcher_background" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:background="@drawable/rounded_scrollview_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <EditText
                        android:id="@+id/txtEmail"
                        style="@style/RegistrationField"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/txtPassword"
                        style="@style/RegistrationField"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/txtPasswordConfirm"
                        style="@style/RegistrationField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/btnNewAccount"
                        style="@style/SignInButton"
                        android:text="@string/sign_up"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="12dp" />

                    <View
                        android:id="@+id/horizontalLine"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/txtSignInUsing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="OR SIGN IN USING"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnLoginGoogle"
                        style="@style/LoginGoogleButton"
                        android:layout_height="31dp"
                        android:text="Google"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="12dp"
                        app:icon="@android:drawable/stat_sys_data_bluetooth" />

                    <TextView
                        android:id="@+id/txtForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:text="Forgot Password?"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>