<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/greenBackgroundDarker"
                android:text="acc1"
                android:textSize="10sp" />

            <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/greenBackgroundDarker"
                android:text="acc2"
                android:textSize="10sp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/greenBackgroundDarker"
                android:text="acc3"
                android:textSize="10sp" />

            <Button
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/greenBackgroundDarker"
                android:text="acc4"
                android:textSize="10sp" />

            <Button
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/greenBackgroundDarker"
                android:text="acc5"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtBgTop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/layoutSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="236dp"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txtBgTop"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/txtEmail"
                style="@style/SignInViewEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtPassword"
                style="@style/SignInViewEditText"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnSignIn"
                style="@style/SignInViewButton"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/btnNewAccount"
                style="@style/SignInViewButton"
                android:text="@string/sign_up"/>

            <View
                android:id="@+id/horizontalLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/txtSignInUsing"
                style="@style/SignInViewText"
                android:visibility="gone"
                android:text="OR SIGN IN USING"
                />

            <Button
                android:id="@+id/btnLoginGoogle"
                style="@style/LoginGoogleButton"
                android:visibility="gone"
                android:layout_height="31dp"
                android:text="Google"
                app:backgroundTint="@color/greenBackgroundDarker"
                app:icon="@drawable/googleg_standard_color_18" />

            <TextView
                android:id="@+id/txtForgotPassword"
                 style= "@style/SignInViewText"
                android:text="Forgot Password?" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="236dp"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/rounded_scrollview_background"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/txtBgTop"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reset Password"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_light"
                android:text="Enter the email associated with your account and we'll send you a link to reset your password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/txtEmailForgotPass"
                style="@style/RegistrationField"
                android:hint="@string/forgot_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnSubmit"
                style="@style/SignInButton"
                android:text="@string/forgot_password"
                app:backgroundTint="@color/newGreen"
                app:cornerRadius="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/txtReturnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/return_to_signin"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ecometrics_intro_1" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="246dp"
            android:layout_height="50dp"
            android:layout_marginTop="176dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="ECOMETRICS"
            android:textAlignment="center"
            android:textColor="@color/greenBackground"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.557"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtBgTop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="gone">

            <LinearLayout
                android:id="@+id/fake_loading_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_light"
                    android:text="Signing in"
                    android:textAlignment="center"
                    android:textSize="24dp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:textAlignment="center" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>